[gd_scene load_steps=2 format=3 uid="uid://qclubkc7e77e"]

[ext_resource type="Script" uid="uid://bl52d63ve5nrt" path="res://Codes/UI.gd" id="1_jxero"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jxero")

[node name="TimerLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "10"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 384.0
offset_right = 424.0
offset_bottom = 23.0
text = "SCORE 10"

[node name="SeedsLabel" type="Label" parent="."]
offset_left = 896.0
offset_right = 936.0
offset_bottom = 23.0
text = "SEEDS 10"
